loopdowhile.LoopDoWhile.scala.error
Erreur de compilation :
LoopDoWhile:4: error: not found: type ==
} while ( !getCouleurSol():color==Color.white )  
                                ^LoopDoWhile:4: error: value unary_! is not a member of java.awt.Color
} while ( !getCouleurSol():color==Color.white )  
          ^